--- a/mregister.html
+++ b/mregister.html
@@ -102,6 +102,6 @@
  <script type="text/javascript" src="js/parsley/parsley.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/jqueryui/jquery-ui.min.js"></script>
-<script type="application/javascript" src="mzhuce.js"></script>
+<script type="application/javascript" src="mregister.js"></script>
 <script src="js/layer/layer.js"></script>
 </html>
