--- a/register.html
+++ b/register.html
@@ -101,6 +101,6 @@
  <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
  <script type="text/javascript" src="js/parsley/parsley.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
-<script type="text/javascript" src="zhuce.js"></script>
+<script type="text/javascript" src="register.js"></script>
 <script src="js/layer/layer.js"></script>
 </html>
